--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,15 @@
+<%= form_for @user do |f| %>
+	<%= f.label :username %>
+  <%= f.text_field :username, placeholder:"Username goes here"%><br><br>
+	<%= f.label :email %>
+	<%= f.text_field :email, placeholder: "example@example.com" %><br><br>
+	<%= f.label :password %>
+	<%= f.password_field :password %><br><br>
+	<%= f.submit "Submit" %>
+<% end %>
+
+
+<!--
 <form accept-charset="UTF-8" action="/users" method="post">
 		<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 		<label for="username">Username</label>
@@ -8,3 +20,14 @@
 		<input type="password" id="password" name="user[password]"><br><br>
 		<input type="submit" value="Submit">
 </form>
+-->
+
+<%# <%= form_tag('/users') do %>
+	<%# <%= label_tag 'user[username]', 'Username' %>
+	<%# <%= text_field_tag 'user[username]' %><br><br>
+	<%# <%= label_tag 'user[email]', 'Email' %>
+	<%# <%= text_field_tag 'user[email]' %><br><br>
+	<%# <%= label_tag 'user[password]', 'Password' %>
+	<%# <%= password_field_tag 'user[password]' %><br><br>
+	<%# <%= submit_tag "Submit" %>
+<%# <% end %>
